--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,73 @@
  *= require_tree .
  *= require_self
  */
+
+/* RESETS */
+
+html, body, header, footer, div, ul, li, h1, h3, p, form, input, button {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  font: inherit;
+}
+
+h1, h3, p, li, input, button {
+  font-family: sans-serif;
+}
+
+/* CLEARFIX */
+
+.group:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+/* STYLES */
+
+header {
+  display: block;
+  position: fixed;
+  height: 50px;
+  width: 100%;
+  background: #ccc;
+}
+
+header > .logo {
+  display: block;
+  float: left;
+}
+
+header > nav {
+  display: block;
+  float: right;
+}
+
+ul.dropdown {
+  position: absolute;
+  display: none;
+}
+
+.user-info {
+  position: relative;
+}
+
+.user-info:hover > ul.dropdown {
+  display: block;
+}
+
+main {
+  padding-top: 50px;
+}
+
+h1 {
+  text-align: center;
+  margin: 100px;
+  font-size: 40px;
+}
+
+h3 {
+  text-align: center;
+  margin: 50px;
+  font-size: 25px;
+}
