Add first layer of filtering for listings.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 
 <!-- Search Form Goes Here -->
 
-<form action="" method="GET" class="listing-search">
+<form action="<%= listings_url %>" method="GET" class="listing-search">
   <label for="short-term">Short Term (less than 1 month)</label>
   <input type="radio" name="listing[term]" value="short" id="short-term">
 
