--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the listings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.map {
+  width: 40%;
+  height: 900px;
+  border: 5px solid black;
+  float: left;
+  display: block;
+}
+
+.listing-params {
+  display: block;
+  float: left;
+  width: 50%;
+  padding: 20px;
+}
+
+.listing-params input {
+  border: 1px solid black;
+  width: 130px;
+}
+
+
+.listing-list {
+  display: block;
+  float: left;
+  width: 50%;
+  padding: 20px;
+}
