--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,32 @@
 <h1>Sign up for AirNZG</h1>
 
-<form action="<%= users_url %>" method="POST">
+<form action="<%= users_url %>" method="POST" class="user-form">
   <%= auth_token %>
 
-  <label for="user-email">Email</label>
   <input type="text"
          name="user[email]"
          id="user-email"
          value="<%= @user.email %>">
+  <label for="user-email">Email</label>
 
-  <label for="user-password">Password</label>
+
   <input type="password" name="user[password]" id="user-password">
+  <label for="user-password">Password</label>
 
-  <label for="user-fname">First Name</label>
+
   <input type="text"
          name="user[fname]"
          id="user-fname"
          value="<%= @user.fname %>">
+  <label for="user-fname">First Name</label>
 
-  <label for="user-lname">Last Name</label>
+
   <input type="text"
          name="user[lname]"
          id="user-lname"
          value="<%= @user.lname %>">
+  <label for="user-lname">Last Name</label>
+  <br>
 
   <button>Sign Up</button>
 </form>
