--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -20,7 +20,7 @@
 .listing-params input {
   border: 1px solid black;
   margin: 20px;
-  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .listing-params input[type="date"] {
