--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         </span>
         <a href="#">Messages</a>
         <a href="#">Notifications</a>
-        <a href="#">New Listing</a>
+        <a href="<%= new_listing_url %>">New Listing</a>
       <% else %>
         <a href="<%= new_session_url %>">Sign In</a>
         <a href="<%= new_user_url %>">Sign Up</a>
