--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,9 @@ h1, h3, p, li, input, button, label {
   font-family: sans-serif;
 }
 
-
+ul, li{
+	list-style: none;
+}
 
 /* CLEARFIX */
 
@@ -58,9 +60,18 @@ header > nav {
   float: right;
 }
 
+header a, header span {
+	padding: 10px;
+	display: block;
+	float: left;
+}
+
 ul.dropdown {
   position: absolute;
   display: none;
+	width: 150px;
+	background: #eee;
+	top: 50px;
 }
 
 .user-info {
@@ -70,6 +81,30 @@ ul.dropdown {
 .user-info:hover > ul.dropdown {
   display: block;
 }
+
+.user-info:hover > ul.dropdown:after {
+	content: "";
+  display: block;
+  position: absolute;
+  top: -15px;
+	left: 5px;
+
+  width: 0;
+  height: 0;
+  border-top: 0 solid #eee;
+  border-bottom: 15px solid #eee;
+  border-right: 15px solid transparent;
+  border-left: 15px solid transparent;
+  background: transparent;
+}
+
+/*.user-info:hover > .invis {
+  position: absolute;
+  display: block;
+	top: 30px;
+	border: 10px solid #eee;
+}*/
+
 
 main {
   padding-top: 50px;
@@ -95,6 +130,7 @@ form {
 
 .listing-search > input {
   margin: auto;
+	margin-bottom: 10px;
   display: block;
   border: 1px solid black;
   text-align: center;
