--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 					<div class="invis"></div>
           <ul class="dropdown">
             <li><a href="<%= my_listings_url %>">Your Listings</a></li>
-            <li><a href="#">Your Bookings</a></li>
+            <li><a href="<%= my_booking_requests_url %>">Your Booking Requests</a></li>
             <li><a href="#">Your Wishlist</a></li>
             <li><a href="<%= edit_user_url(current_user) %>">Edit Profile</a></li>
             <li><a href="#">Account</a></li>
