Create more user seed data. Begin Oauth implementation.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -29,10 +29,10 @@
   <br>
 	
   <datalist id="cities">
-    <option value="New York, United States">
-    <option value="Chicago, United States">
-    <option value="Los Angeles, United States">
-    <option value="Tokyo, Japan">
+    <option value="New York">
+    <option value="Chicago">
+    <option value="Los Angeles">
+    <option value="North Pole">
   </datalist>
 	
 	<textarea name="user[description]" id="user-description" value="<%= @user.description %>"></textarea>
