--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,13 +67,13 @@ header > nav {
 
 header article {
 	padding: 10px;
+	font-size: 16px;
 	display: block;
 	float: left;
 }
 
 header figure {
-	padding-left: 10px;
-	display: block;
+	display: inline-block;
 	float: left;
 }
 
@@ -99,6 +99,7 @@ ul.dropdown {
 
 .user-info {
   position: relative;
+	padding: 0;
 }
 
 article:hover > ul.dropdown {
