--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,39 @@
     <nav class="header-nav group">
 
       <% if signed_in? %>
+	      <article class="user-info">
+					<a href="#">
+						<article>
+							<%= current_user.fname %>
+						</article>
+						<figure class="user-thumbnail">
+							<%= image_tag current_user.avatar.url(:thumb) %>
+						</figure>
+					</a>
+					<div class="invis"></div>
+	        <ul class="dropdown">
+	          <li><a href="<%= my_listings_url %>">
+							Your Listings
+						</a></li>
+	          <li><a href="<%= my_booking_requests_url %>">
+							Your Booking Requests
+						</a></li>
+	          <li><a href="#">
+							Your Wishlist
+						</a></li>
+	          <li><a href="<%= edit_user_url(current_user) %>">
+							Edit Profile
+						</a></li>
+	          <li><a href="#">
+							Account
+						</a></li>
+	          <li>
+							<%= link_to 'Log Out', session_url, 
+							method: :delete %>
+						</li>
+	        </ul>
+	      </article>
+				
 				<article class="notifications">
 	      	<a href="#">Notifications</a> 
 					<div class="notif-num">
@@ -28,38 +61,6 @@
 	      <article class="messages">
 					<a href="#">Messages</a>
 				</article>
-				
-				<figure class="user-thumbnail">
-					<%= image_tag current_user.avatar.url(:thumb) %>
-				</figure>
-				
-        <article class="user-info">
-					<a href="#">
-						<%= current_user.fname %>
-					</a>
-					<div class="invis"></div>
-          <ul class="dropdown">
-            <li><a href="<%= my_listings_url %>">
-							Your Listings
-						</a></li>
-            <li><a href="<%= my_booking_requests_url %>">
-							Your Booking Requests
-						</a></li>
-            <li><a href="#">
-							Your Wishlist
-						</a></li>
-            <li><a href="<%= edit_user_url(current_user) %>">
-							Edit Profile
-						</a></li>
-            <li><a href="#">
-							Account
-						</a></li>
-            <li>
-							<%= link_to 'Log Out', session_url, 
-							method: :delete %>
-						</li>
-          </ul>
-        </article>
 			
 				<article class="new-listing">
 	        <a href="<%= new_listing_url %>">New Listing</a>
