--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>Update your Profile</h1>
 
+<a href="<%= user_url(@user) %>">Preview</a>
+
 <form action="<%= user_url(@user) %>" method="POST" class="user-form"
 	    enctype="multipart/form-data">
   <%= auth_token %>
@@ -41,7 +43,11 @@
 	<br>
 
 	<input type="file" name="user[avatar]" id="user-avatar">
-	<label for="user-avatar">Upload an Avatar</label>
+	<label for="user-avatar">*Upload an Avatar</label>
+	<br>
+	<small>*If you've signed in with Facebook, your Facebook profile picture is set by default.</small>
+	<br>
+	
 
   <button>Update Profile</button>
 </form>
