--- a/app/assets/templates/listings/show.jst.ejs
+++ b/app/assets/templates/listings/show.jst.ejs
@@ -37,9 +37,13 @@
 	
 	<article class="unavailable-list">
 		<p>Dates Unavailable</p>
+		<% if(listing.get("unavailable_ranges")) { %>
 		<ul>
-
+			<% listing.get("unavailable_ranges").forEach(function(range) { %>
+				<li><%= range.start_date %> - <%= range.end_date %></li>
+			<% }) %>
 		</ul>
+		<% } %>
 	</article>
 	
 	<article class="description">
@@ -64,6 +68,18 @@
 			<tr>
 				<td>Home Type</td>
 				<td><%= listing.escape("home_type") %></td>
+			</tr>
+			<tr>
+				<td>Amenities</td>
+				<td>
+					<% if (listing.get("amenities")) { %>
+					<ul>
+						<% listing.get("amenities").forEach(function(amenity) { %>
+							<li><%= amenity.name %></li>
+						<% }); %>
+					</ul>
+					<% }; %>
+				</td>
 			</tr>
 		</table>
 	</article>
