Add user show page in backbone. Begin to implement listings index in backbone.

--- a/app/assets/templates/listings/show.jst.ejs
+++ b/app/assets/templates/listings/show.jst.ejs
@@ -1,7 +1,7 @@
 <section class="listing-head">
 	<div class="user-block">
 		
-		<a href="#">
+		<a href="#/users/<%= user.get("id") %>">
 			<%= user.escape("fname") %>
 			<img src="<%= user.escape("avatar_small") %>">
 		</a>
