Add non-functional price slider to index.

--- a/app/assets/templates/listings/index.jst.ejs
+++ b/app/assets/templates/listings/index.jst.ejs
@@ -45,6 +45,8 @@
     <input type="number" placeholder="High Price"
            id="listing-high-price" value="<%= listings.params().high_price %>">
     <br>
+		
+		<div class="price-slider"></div>
 
     <button>Filter</button>
   </form>
