--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>AirNZG</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -93,5 +93,23 @@
   <main class="group">
     <%= yield %>
   </main>
+	
+	<script>
+		$(document).ready(function(){
+		  AirNZG.initialize();
+	
+			$("body").on("submit", "form.listing-search", executeQuery);
+	
+			function executeQuery(event) {
+				event.preventDefault();
+		
+				var queryString = $(event.currentTarget).serialize()
+		
+				Backbone.history.navigate("#/listings?" + queryString)	
+			}
+		});
+	</script>
 </body>
 </html>
+
+
