Fix backbone initialization so that it only occurs on home action. Add map to index page.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -30,3 +30,19 @@
   <button>Search</button>
 
 </form>
+
+<script>
+	$(document).ready(function(){
+	  AirNZG.initialize();
+
+		$("body").on("submit", "form.listing-search", executeQuery);
+
+		function executeQuery(event) {
+			event.preventDefault();
+	
+			var queryString = $(event.currentTarget).serialize()
+	
+			Backbone.history.navigate("#/listings?" + queryString)	
+		}
+	});
+</script>
