--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+	
+	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.0.1/mapbox.js'></script>
+	<link href='https://api.tiles.mapbox.com/mapbox.js/v2.0.1/mapbox.css' rel='stylesheet' />
 </head>
 <body>
 
@@ -94,21 +97,6 @@
     <%= yield %>
   </main>
 	
-	<script>
-		$(document).ready(function(){
-		  AirNZG.initialize();
-	
-			$("body").on("submit", "form.listing-search", executeQuery);
-	
-			function executeQuery(event) {
-				event.preventDefault();
-		
-				var queryString = $(event.currentTarget).serialize()
-		
-				Backbone.history.navigate("#/listings?" + queryString)	
-			}
-		});
-	</script>
 </body>
 </html>
 
