--- a/app/assets/templates/listings/list.jst.ejs
+++ b/app/assets/templates/listings/list.jst.ejs
@@ -1,3 +1,3 @@
 <% listings.each(function(listing) { %>
-  <li><a href="#/listings/<%= listing.id %>"><%= listing.escape("title") %></a></li>
+  <li><a href="/listings/<%= listing.id %>"><%= listing.escape("title") %></a></li>
 <% }); %>
