Fix bugs in bookings controller which made interaction between Rails and Backbone impossible.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -164,8 +164,10 @@ form {
 }
 
 .notice-bar {
+	position: fixed;
 	background: red;
 	color: white;
 	font-weight: bold;
 	z-index: 1000;
+	display: block;
 }
