--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -42,7 +42,7 @@
 	
 			var queryString = $(event.currentTarget).serialize()
 	
-			Backbone.history.navigate("#/listings?" + queryString)	
+			Backbone.history.navigate("#/listings?" + queryString, { trigger: true })	
 		}
 	});
 </script>
